--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,9 @@
 {
     "require": {
         "twbs/bootstrap": "^3.3"
+    },
+
+    "autoload": {
+        "psr-4": {"WebDevResources\\": "src"}
     }
 }
