--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,6 +6,11 @@ RewriteRule ^/$ index.php
 RewriteRule ^sort/([A-Za-z]+)/$ index.php?sort=$1
 #sorting with category rewrite
 RewriteRule ^sort/([A-Za-z]+)/category/([A-Za-z]+)/$ index.php?sort=$1&category=$2
+#page number Rewrite
+RewriteRule ^([0-9]+)/$ index.php?page=?1
+
+#page number Rewrite with possible sort and category vars
+
 #category Rewrite
 RewriteRule ^category/([A-Za-z]+)/$ index.php?category=$1
 #new.php Rewrite
