Adds rewrites for vote function

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,13 +6,12 @@ RewriteRule ^/$ index.php
 RewriteRule ^sort/([A-Za-z]+)/$ index.php?sort=$1
 #sorting with category rewrite
 RewriteRule ^sort/([A-Za-z]+)/category/([A-Za-z]+)/$ index.php?sort=$1&category=$2
+
 #page number Rewrite
 RewriteRule ^pg([0-9]+)/$ index.php?pg=$1
 RewriteRule ^category/([A-Za-z]+)/pg([0-9]+)/$ index.php?category=$1&pg=$2
 RewriteRule ^sort/([A-Za-z]+)/pg([0-9]+)/$ index.php?sort=$1&pg=$2
 RewriteRule ^sort/([A-Za-z]+)/category/([A-Za-z]+)/pg([0-9]+)/$ index.php?sort=$1&category=$2&pg=$3
-
-#page number Rewrite with possible sort and category vars
 
 #category Rewrite
 RewriteRule ^category/([A-Za-z]+)/$ index.php?category=$1
@@ -20,3 +19,9 @@ RewriteRule ^category/([A-Za-z]+)/$ index.php?category=$1
 RewriteRule ^new/$ new.php
 #edit.php rewrite
 RewriteRule ^edit/([0-9]+)/$ edit.php?id=$1
+
+#vote Rewrite
+RewriteRule ^website([0-9]+)/pg([0-9]+)/$ index.php?id=$1&pg=$2
+RewriteRule ^category/([A-Za-z]+)/website([0-9]+)/pg([0-9]+)/$ index.php?category=$1&id=$2&pg=$3
+RewriteRule ^sort/([A-Za-z]+)/website([0-9]+)/pg([0-9]+)/$ index.php?sort=$1&id=$2&pg=$3
+RewriteRule ^sort/([A-Za-z]+)/category/([A-Za-z]+)/website([0-9]+)/pg([0-9]+)/$ index.php?sort=$1&category=$2&id=$3&pg=$4
